<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="error">Error</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="no_internet_text">No internet connection</string>
    <string name="screen_character_list">Characters list</string>
    <string name="screen_character_details">Details Character</string>
    <string name="screen_location_list">Locations list</string>
    <string name="screen_location_details">Details Location</string>
    <string name="screen_episodes_list">Episodes list</string>
    <string name="screen_episodes_details">Details episode</string>

    //Character Details
    <string name="character_details_name">Name:</string>
    <string name="character_details_origin">Origin:</string>
    <string name="character_details_location">Location:</string>
    <string name="character_details_species">Species:</string>
    <string name="character_details_status">Status:</string>
    <string name="character_details_gender">Gender:</string>

    //Location List
    <string name="locations_list_name_title">Location:</string>
    <string name="locations_list_type_title">Type:</string>
    <string name="locations_list_dimension_title">Dimension:</string>


    // Bottom Sheet Characters
    <string name="character_bottom_name">Name</string>
    <string name="character_bottom_hint">Character name...</string>

    <string name="status">Status</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>

    <string name="species">Species</string>
    <string name="human">Human</string>
    <string name="alien">Alien</string>
    <string name="humanoid">Humanoid</string>
    <string name="animal">Animal</string>
    <string name="robot">Robot</string>
    <string name="poopy">Poopy</string>
    <string name="cronenberg">Cronenberg</string>
    <string name="mythological">Mythological Creature</string>
    <string name="disease">Disease</string>
    <string name="unknown_species">Unknown</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="unknown_gender">Unknown</string>
    <string name="characters_apply">Apply</string>

    // Bottom Sheet Locations
    <string name="locations_bottom_name">Name</string>
    <string name="locations_bottom_hint">Location name...</string>
    <string name="locations_apply">Apply</string>

    <string name="location_type">Type</string>
    <string name="acid_plant">Acid Plant</string>
    <string name="arcade">Arcade</string>
    <string name="artificially">Artificially</string>
    <string name="asteroid">Asteroid</string>
    <string name="base">Base</string>
    <string name="box">Box</string>
    <string name="cluster">Cluster</string>
    <string name="consciousness">Consciousness</string>
    <string name="convention">Convention</string>
    <string name="country">Country</string>
    <string name="customs">Customs</string>
    <string name="daycare">Daycare</string>
    <string name="death_star">Death Star</string>
    <string name="diegesis">Diegesis</string>
    <string name="dimension">Dimension</string>
    <string name="dream">Dream</string>
    <string name="dwarf_planet">Dwarf planet</string>
    <string name="elemental_rings">Elemental Rings</string>
    <string name="fantasy_town">Fantasy town</string>
    <string name="game">Game</string>
    <string name="hell">Hell</string>
    <string name="location_human">Human</string>
    <string name="liquid">Liquid</string>
    <string name="machine">Machine</string>
    <string name="memory">Memory</string>
    <string name="menagerie">Menagerie</string>
    <string name="microverse">Microverse</string>
    <string name="miniverse">Miniverse</string>
    <string name="mount">Mount</string>
    <string name="nightmare">Nightmare</string>
    <string name="non_diegetic">Non-Diegetic</string>
    <string name="planet">Planet</string>
    <string name="police_department">Police Department</string>
    <string name="quasar">Quasar</string>
    <string name="reality">Reality</string>
    <string name="resort">Resort</string>
    <string name="spa">Spa</string>
    <string name="space">Space</string>
    <string name="space_station">Space station</string>
    <string name="spacecraft">Spacecraft</string>
    <string name="teenyverse">Teenyverse</string>
    <string name="location_tv">TV</string>
    <string name="woods">Woods</string>
    <string name="location_type_unknown">unknown</string>

    <string name="location_dimension">Dimension</string>
    <string name="location_dim_unknown">unknown</string>
    <string name="chair">Chair Dimension</string>
    <string name="cromulon">Cromulon Dimension</string>
    <string name="location_cronenberg">Cronenberg Dimension</string>
    <string name="location_5126">Dimension 5-126</string>
    <string name="location_c137">Dimension C-137</string>
    <string name="location_c35">Dimension C-35</string>
    <string name="location_c500a">Dimension C-500A</string>
    <string name="location_d176">Dimension D716</string>
    <string name="location_d99">Dimension D716-B</string>
    <string name="location_j19">Dimension D-99</string>
    <string name="location_j22">Dimension J-22</string>
    <string name="location_k22">Dimension K-22</string>
    <string name="location_k83">Dimension K-83</string>
    <string name="eric_stoltz">Eric Stoltz Mask Dimension</string>
    <string name="fantasy">Fantasy Dimension</string>
    <string name="fascist">Fascist Dimension</string>
    <string name="fascist_shrimp">Fascist Shrimp Dimension</string>
    <string name="fascist_teddy">Fascist Teddy Bear Dimension</string>
    <string name="giant_telepathic">Giant Telepathic Spiders Dimension</string>
    <string name="magic">Magic Dimension</string>
    <string name="merged">Merged Dimension</string>
    <string name="phone">Phone Dimension</string>
    <string name="pizza">Pizza Dimension</string>
    <string name="post_apocalyptic">Post-Apocalyptic Dimension</string>
    <string name="replacement">Replacement Dimension</string>
    <string name="testicle_monster">Testicle Monster Dimension</string>
    <string name="tusk">Tusk Dimension</string>
    <string name="wasp">Wasp Dimension</string>


    //Episodes List
    <string name="episodes_list_name_title">Episode:</string>
    <string name="episodes_list_number_title">Number:</string>
    <string name="episodes_list_data_title">Data:</string>

    // Bottom Sheet Episodes
    <string name="episodes_bottom_name">Name</string>
    <string name="episodes_bottom_hint">Episode name...</string>
    <string name="episodes_apply">Apply</string>

    <string name="S01E01">S01E01</string>
    <string name="S01E02">S01E02</string>
    <string name="S01E03">S01E03</string>
    <string name="S01E04">S01E04</string>
    <string name="S01E05">S01E05</string>
    <string name="S01E06">S01E06</string>
    <string name="S01E07">S01E07</string>
    <string name="S01E08">S01E08</string>
    <string name="S01E09">S01E09</string>
    <string name="S01E10">S01E10</string>
    <string name="S01E11">S01E11</string>
    <string name="S02E01">S02E01</string>
    <string name="S02E02">S02E02</string>
    <string name="S02E03">S02E03</string>
    <string name="S02E04">S02E04</string>
    <string name="S02E05">S02E05</string>
    <string name="S02E06">S02E06</string>
    <string name="S02E07">S02E07</string>
    <string name="S02E08">S02E08</string>
    <string name="S02E09">S02E09</string>
    <string name="S02E10">S02E10</string>
    <string name="S03E01">S03E01</string>
    <string name="S03E02">S03E02</string>
    <string name="S03E03">S03E03</string>
    <string name="S03E04">S03E04</string>
    <string name="S03E05">S03E05</string>
    <string name="S03E06">S03E06</string>
    <string name="S03E07">S03E07</string>
    <string name="S03E08">S03E08</string>
    <string name="S03E09">S03E09</string>
    <string name="S03E10">S03E10</string>
    <string name="S04E01">S04E01</string>
    <string name="S04E02">S04E02</string>
    <string name="S04E03">S04E03</string>
    <string name="S04E04">S04E04</string>
    <string name="S04E05">S04E05</string>
    <string name="S04E06">S04E06</string>
    <string name="S04E07">S04E07</string>
    <string name="S04E08">S04E08</string>
    <string name="S04E09">S04E09</string>
    <string name="S04E10">S04E10</string>
    <string name="S05E01">S05E01</string>
    <string name="S05E02">S05E02</string>
    <string name="S05E03">S05E03</string>
    <string name="S05E04">S05E04</string>
    <string name="S05E05">S05E05</string>
    <string name="S05E06">S05E06</string>
    <string name="S05E07">S05E07</string>
    <string name="S05E08">S05E08</string>
    <string name="S05E09">S05E09</string>
    <string name="S05E10">S05E10</string>


</resources>